Fix heading icon vertical alignment

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -55,8 +55,8 @@ h1 {
   i {
     position: absolute;
     left: 0;
-    //top: 50%;
-    //margin-top: -0.5em; // half height of icon
+    top: 50%;
+    margin-top: -0.4em; // half height of icon
   }
 }
 
